[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/art/Actors/Dusty Tomato1.png" type="Texture" id=1]
[ext_resource path="res://assets/art/Actors/Dusty Tomato2.png" type="Texture" id=2]
[ext_resource path="res://assets/art/Actors/Dusty Tomato4.png" type="Texture" id=3]
[ext_resource path="res://assets/art/Actors/Dusty Tomato3.png" type="Texture" id=4]
[ext_resource path="res://assets/art/Actors/Dusty Tomato5.png" type="Texture" id=5]
[ext_resource path="res://src/Actors/Dusty Tomato.gd" type="Script" id=6]
[ext_resource path="res://assets/art/Actors/Dusty Splat 1.png" type="Texture" id=7]
[ext_resource path="res://assets/art/Actors/Dusty Splat 2.png" type="Texture" id=8]
[ext_resource path="res://assets/art/Actors/Dusty Splat 0.png" type="Texture" id=9]
[ext_resource path="res://assets/art/Actors/hp.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 32.0

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( 0, -32, 16, -24, 24, -16, 24, 16, 8, 32, -8, 32, -24, 16, -24, -16 )

[node name="Dusty Tomato" type="KinematicBody2D" groups=[
"enemy",
]]
collision_layer = 2
collision_mask = 11
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." groups=[
"double",
"enemy",
]]
position = Vector2( -1, -1 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
frame = 8
speed_scale = 2.0
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 32, 0 )
enabled = true
cast_to = Vector2( 0, 36 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
light_mask = 2
occluder = SubResource( 3 )
light_mask = 2

[node name="DeadTimer" type="Timer" parent="."]
one_shot = true

[node name="HealthBar" type="ColorRect" parent="."]
margin_left = -20.0
margin_top = -40.0
margin_right = 20.0
margin_bottom = -37.0
color = Color( 0, 0, 0, 0.470588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalHealth" type="Sprite" parent="HealthBar"]
position = Vector2( 20, 2 )
texture = ExtResource( 10 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
